# browserserve

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .jscpd.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  browserserve.example.yml  deny.toml  justfile
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: ci.yml  release-docker.yml
docker/: Dockerfile  entrypoint.sh  seccomp.json
docker/checksums/: chrome-linux64.sha256  chromium-linux-arm64.sha256
docs/: BENCHMARKS.md
e2e/: package-lock.json  package.json  smoke.ts
scripts/: build-image.sh  gate.sh  test-linux.sh
src/: bridge.rs  capacity.rs  chrome.rs  config.rs  factory.rs  lib.rs  linux.rs  logging.rs  main.rs  pool.rs  pressure.rs  profile.rs  rss.rs  server.rs  session_dirs.rs  template.rs  test_support.rs
src/chrome/: client.rs  find.rs  flags.rs  kill.rs  launch.rs  pipe.rs
src/linux/: cgroup.rs  probe.rs  tiers.rs
src/profile/: cdp.rs  cookie.rs  localstorage.rs  manifest.rs  payload.rs
src/server/: auth.rs  http.rs  profiles.rs  ws.rs
tests/: launch_e2e.rs  pool_props.proptest-regressions  pool_props.rs
